# simples

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
episodes/000-templates/: bigquery.sql  clickhouse.sql  cratedb.sql  duckdb.sql  mssql.sql  mysql.sql  oracle.sql  postgres.sql  questdb.sql  snowflake.sql  sqlite.sql  tigerbeetle_.py  trino.sql
episodes/001-whats-a-primary-key/: ddl.sql  duckdb.sql  main.md  mssql.sql  sqlite.sql
src/python_template/: main.py
tests/: test__main.py
tools/: add_license.py  apply.py
