# yaml-language-server: $schema=https://json.schemastore.org/pyproject.json
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "simples"
version = "0.0.0"
description = "Simple SQL YouTube playlist samples."
authors = [{name = "billwallis"}]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.4",
    "tigerbeetle>=0.17.9",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]


[tool.setuptools]
packages = ["episodes"]
